<resources>
    <string name="app_name">TourAssistant</string>
    <string name="santa_initialization_text">初始化文字</string>
    <string name="santa_setting">设置</string>
    <string name="santa_my_footprint">我的足迹</string>
    <string name="santa_my_collection">我的收集</string>
    <string name="santa_history">历史记录</string>
    <string name="santa_clean">清除搜索历史</string>
    <string name="sy_picture_title">照片</string>
    <string name="sy_scenicspot_title">景区详情</string>
    <string name="sy_scenicspot_recommend">推荐指数：</string>
    <string name="sy_scenicspot_price">票价：</string>
    <string name="sy_scenicspot_time">开放时间：</string>
    <string name="sy_scenicspot_btn1">前往景区</string>
    <string name="sy_scenicspot_btn2">探索景区</string>
    <string name="sy_viewspot_title">景点详情</string>
    <string name="sy_viewspot_recommend">推荐指数：</string>
    <string name="sy_viewspot_price">票价：</string>
    <string name="sy_viewspot_time">开放时间：</string>
    <string name="sy_viewspot_btn">前往景点</string>
    <string name="bhr_tabhost_home_page_text">首页</string>
    <string name="bhr_tabhost_map_page_text">地图</string>
    <string name="bhr_tabhost_group_page_text">队伍</string>
    <string name="bhr_tabhost_my_page_text">我的</string>
    <string name="wx_login_user_text">邮箱号/手机</string>
    <string name="wx_login_pwd_text">密码</string>
    <string name="wx_login_lg_text">登录</string>
    <string name="wx_login_rs_text">注册</string>
    <string name="wx_login_3lg_text">第三方直接登录</string>
    <string name="wx_register_mailrs_text">邮箱注册</string>
    <string name="wx_register_phoners_text">手机注册</string>
    <string name="wx_register1_mail_text">请输入邮箱</string>
    <string name="wx_register1_pwd_text">请输入密码</string>
    <string name="wx_register1_pwd2_text">请再次输入密码</string>
    <string name="wx_register2_phone_text">请输入手机号码</string>
    <string name="wx_register2_yzminput_text">请输入验证码</string>
    <string name="wx_register2_yzm_text">获取验证码</string>
    <string name="wx_jzmm">记住密码</string>
    <string name="bhr_home_title_area">地区</string>
    <string name="bhr_home_title_search_hint">搜索景区信息</string>
    <string name="bhr_home_city_recommond">附近景区推荐</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
</resources>
